# torgaddon

./: .gitignore  README.md  build.ts  eslint.config.ts  gulpfile.js  package-lock.json  package.json  vite.config.ts
browser/: README.md  main.ts  utils.ts
database/: README.md
database/queries/: README.md
database/setup/: README.md
scripts/: run_tmux_env.sh  uswds_init.sh
server/: sample.env
server/src/: main.rs
server/templates/: base.html  home.html  item.html
src/server/: Cargo.toml  README.md
src/server/src/: main.rs
src/server/templates/: base.html  home.html  item.html
styles/: main.scss
styles/layouts/: _home.scss
styles/vendors/uswds/: _uswds-theme.scss
