[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
dotenv = "0.15"
envy = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5.2", features = ["trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1.44.2", features = ["full"]}
askama = "0.13.1"
